<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hapticFeedbackEnabled="false"
        android:layerType="hardware"
        android:id="@+id/SettingUI"
        android:background="?attr/colorPrimarySurface">


    <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar2"
            app:titleTextColor="@android:color/primary_text_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:title="@string/settingText"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/design_default_color_primary" />

    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/numbrSliderText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/Testtable"
            android:paddingVertical="10dp"
            android:visibility="gone"
            tools:visibility="gone" />

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/testcard1"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="480dp"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="4dp"
            app:cardElevation="5dp"
            app:contentPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone">

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/testcard2"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginStart="120dp"
                android:layout_marginBottom="480dp"
                app:cardBackgroundColor="?attr/cardBackgroundColor"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp"
                app:contentPadding="10dp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/infobox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:contextClickable="true"
            android:textAlignment="center"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="4dp"
            app:cardElevation="7dp"
            app:cardUseCompatPadding="false"
            app:contentPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardMaxElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.318">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="gravity"
                tools:layout_editor_absoluteY="385dp"
                tools:layout_editor_absoluteX="11dp">

            <TextView
                    android:text="@string/settingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settingText"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textSize="30sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_marginBottom="20dp" />

            <EditText
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect|textPersonName|textAutoComplete"
                    android:ems="10"
                    android:id="@+id/userNameInput"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:hint="@string/placeholderInputName"
                    android:autofillHints="" />

            <TextView
                    android:text="@string/numOfNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="24sp" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                <com.google.android.material.slider.Slider

                        android:valueFrom="2"
                        android:valueTo="9"
                        android:stepSize="1"
                        android:layout_width="266dp"
                        android:id="@+id/numbrSlider"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content" />

                <TextView
                        android:text="@string/numOfNumbersValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/numbrSliderText"
                        android:gravity="center"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:textAlignment="gravity" />
            </LinearLayout>

            <TextView
                    android:text="@string/rangeOfRandom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="24sp" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp">

                <com.google.android.material.slider.RangeSlider

                        android:valueFrom="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/randomNumberBoundSlider"
                        app:values="@array/initial_slider_values"
                        android:valueTo="20"
                        android:layout_weight="1" />

                <TextView
                        android:text="@string/rangeOfRandomValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/randomNumberBoundText"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="locale"
                    android:animateLayoutChanges="true"
                    android:layout_margin="20dp">

                <Button
                        android:text="Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/testBtt"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="20dp"
                        tools:visibility="gone"
                        android:visibility="gone" />

                <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                <Button
                        android:text="@string/startgame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/startMainGame"
                        android:layerType="hardware"
                        android:layoutDirection="locale"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>

