<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimarySurface"
        android:hapticFeedbackEnabled="false"
        android:layerType="hardware"
        android:id="@+id/SettingUI">


    <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@android:color/primary_text_dark"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/design_default_color_primary"

            app:title="@string/ScoreTitle"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:navigationIcon="@drawable/abc_vector_test" />

    <TextView
            android:text="@string/ScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingText"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="?android:attr/textColorPrimary"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toTopOf="@+id/ScoreCard"
            android:visibility="gone"
            tools:visibility="gone" />


    <com.google.android.material.card.MaterialCardView
            android:id="@+id/ScoreCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:contextClickable="true"
            android:textAlignment="center"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="4dp"
            app:cardElevation="7dp"
            app:cardUseCompatPadding="false"
            app:contentPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardMaxElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.134"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="gravity"
                tools:layout_editor_absoluteY="385dp"
                tools:layout_editor_absoluteX="11dp">

            <TextView
                    android:text="Score Board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ScoreBoardText"
                    android:fontFamily="@font/roboto"
                    android:textSize="50sp"
                    android:textColor="@color/design_default_color_primary" />

            <TextView
                    android:text="@string/ScorePlayerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ScorePlayerName"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_marginVertical="10dp" />

            <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_weight="1"
                    android:layout_marginBottom="30dp" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp">

                <TextView
                        android:text="@string/CorrectTextField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/CorrectTextField"
                        android:layout_weight="1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="24sp"
                        android:textAlignment="center" />

                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/PosScore"
                        android:layout_weight="1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="24sp"
                        android:textAlignment="center" />

            </LinearLayout>

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_weight="1" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp">

                <TextView
                        android:text="@string/NegativeTextField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/NegativeTextField"
                        android:layout_weight="1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="24sp"
                        android:textAlignment="center" />

                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/NegScore"
                        android:layout_weight="1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="24sp"
                        android:textAlignment="center" />
            </LinearLayout>

            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_weight="1" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp">

                <TextView
                        android:text="@string/totalScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/totalScore"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/totalScoreValue"
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_weight="1" />
            </LinearLayout>

            <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_weight="1" />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:textAlignment="center"
                    android:gravity="center">

                <TextView
                        android:text="@string/totalPlaytime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/PlayTime"
                        android:layout_weight="1"
                        android:textSize="24sp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textAlignment="center"
                        android:layout_marginVertical="10dp"
                        android:textAllCaps="false"
                        android:textDirection="locale"
                        android:textStyle="normal" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/playTimeValue"
                        android:textSize="30sp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:text="HH:mm:ss"
                        android:textAlignment="center"
                        android:layout_marginVertical="10dp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/eFab"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|right"
            android:text="@string/newgame"
            app:icon="@drawable/ic_baseline_refresh_24"
            app:layout_constraintTop_toBottomOf="@+id/ScoreCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="0.748" />


</androidx.constraintlayout.widget.ConstraintLayout>

