<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimarySurface"
        android:hapticFeedbackEnabled="false"
        android:layerType="hardware">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/card2text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card4"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="340dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/card4text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card3"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="340dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/card3text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:clipToPadding="false"
            android:contextClickable="true"
            android:textAlignment="center"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="4dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="false"
            app:contentPadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/card1text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="30sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/infobox"
            android:layout_width="390dp"
            android:layout_height="299dp"
            android:clipToPadding="false"
            android:contextClickable="true"
            android:textAlignment="center"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="4dp"
            app:cardElevation="7dp"
            app:cardUseCompatPadding="false"
            app:contentPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:cardMaxElevation="10dp">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="gravity"
                tools:layout_editor_absoluteY="385dp"
                tools:layout_editor_absoluteX="11dp">

            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20dp"
                    android:text="@string/task_name"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteY="385dp"
                    tools:layout_editor_absoluteX="11dp" />

            <TextView
                    android:id="@+id/secleft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    tools:layout_editor_absoluteY="470dp"
                    tools:layout_editor_absoluteX="11dp" />

            <ProgressBar
                    android:id="@+id/progressBar2"
                    style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
                    android:layout_width="349dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:indeterminateTint="#FFFFFF"
                    android:paddingTop="20dp"
                    android:progressTint="@color/design_default_color_primary"
                    tools:layout_editor_absoluteY="490dp"
                    tools:layout_editor_absoluteX="46dp" />

            <TextView
                    android:id="@+id/hinttxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteY="536dp"
                    tools:layout_editor_absoluteX="11dp" />

            <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Score"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteY="568dp"
                    tools:layout_editor_absoluteX="11dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>

